# SNSDB

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  snsdb
include/: binary_reader.h  cuda_encryption.h  gc_manager.h  http_client.h  socket_server.h
src/: binary_reader.cpp  cuda_encryption.cpp  cuda_encryption.cu  gc_manager.cpp  http_client.cpp  main.cpp  socket_server.cpp
